# olist_dw

./: LICENSE.md  README.md  pyproject.toml
docs/: source_to_target.xlsx
docs/pbi_report/: olist_report.pbip
docs/pbi_report/olist_report.Report/: .platform  definition.pbir  report.json
docs/pbi_report/olist_report.Report/StaticResources/RegisteredResources/: Theme_1_-_Light009171352304854219.json
docs/pbi_report/olist_report.SemanticModel/: .platform  diagramLayout.json  model.bim
olist_dw/: dbt_project.yml
olist_dw/models/bronze/: bronze_customers.sql  bronze_order_items.sql  bronze_sellers.sql  source.yml
olist_dw/models/gold/sales/: dim_customer.sql  dim_customers.sql  dim_geolocation.sql  dim_geolocations.sql  dim_order_details.sql  dim_products.sql  dim_sellers.sql  fact_orders.sql  fact_rfm.sql
olist_dw/models/marts/rfm/: rfm_obt.sql  schema.yml
olist_dw/models/marts/sales/: d_customers.sql  d_locations.sql  d_order_details.sql  d_products.sql  d_sellers.sql  f_orders.sql  schema.yml
olist_dw/models/silver/: schema.yml  silver_customer.sql  silver_customers.sql  silver_geolocation.sql  silver_geolocations.sql  silver_order_items.sql  silver_order_payments.sql  silver_orders.sql  silver_products.sql  silver_sellers.sql
olist_dw/models/staging/: source.yml  stg_geolocation.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql
olist_dw/models/warehouse/: dim_customers.sql  dim_locations.sql  dim_order_details.sql  dim_order_reviews.sql  dim_products.sql  dim_sellers.sql  fact_orders.sql  schema.yml
